# PsyPy

./: .gitignore  LICENSE  README.md  check_env_compatibility.py  pyproject.toml
scripts/: run_requirements_samples.py
src/psypy/: __init__.py  config.py  models.py  requirements.py
src/psypyenv/: cli.py  config.py  environment.py  reporting.py  requirements.py
tests/: conftest.py  test_environment_conda.py  test_requirements_scenarios.py
tests/data/requirements_samples/: scenario01_basic.txt  scenario02_comments_whitespace.txt  scenario03_extra_index.txt  scenario04_invalid_entry.txt  scenario05_http_egg.txt  scenario06_editable_git.txt  scenario07_direct_reference.txt  scenario08_with_marker.txt  scenario09_with_extras.txt  scenario10_skip_git_without_egg.txt
