[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psypy-env-checker"
version = "0.1.0"
description = "Cross-platform environment compatibility checker for Python projects."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [{name = "PsyPy Maintainers"}]
dependencies = [
    "packaging>=23.0",
    "platformdirs>=3.0",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
]
keywords = ["environment", "compatibility", "conda", "pip"]

[project.urls]
Homepage = "https://github.com/example/psypy"
Repository = "https://github.com/example/psypy"

[project.scripts]
psypy-env-check = "psypy.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
